# recsend-developer-focused-CLI

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: httpbin_test.yml  swipe_test.yml
recsend/: cli.py
recsend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recsend/commands/: send.py
recsend/utils/: http_client.py
tests/: test_send.py
